--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,11 @@ li {
     opacity: .7;
 }
 
+.strikethrough {
+    color: rgba(197, 5, 5, 0.918);
+    text-decoration: line-through;
+}
+
 .editableItem {
     cursor:pointer;
 }
